project (app VERSION 1.0.0 LANGUAGES CXX)
include(GNUInstallDirs)

set(CLSERV_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(CLSERV_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB CLSERV_HEADERS ${CLSERV_INCLUDE_DIR}/*.h)
file(GLOB CLSERV_SOURCE ${CLSERV_SOURCE_DIR}/*.cpp)

set(CLSERV_HEADERS_LIST ${CLSERV_INCLUDE_DIR})

include_directories(${CLSERV_HEADERS_LIST})

add_executable(${PROJECT_NAME} ${CLSERV_SOURCE})

target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
target_compile_options(${PROJECT_NAME} PRIVATE "-Wall")

target_link_libraries (${PROJECT_NAME} PRIVATE Socket)

set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})

install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME} DESTINATION bin)
install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-${PROJECT_VERSION} DESTINATION bin)
