project(Socket VERSION 1.0.0 LANGUAGES CXX)
include(GNUInstallDirs)

set(SOCKET_LIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(SOCKET_LIB_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB SOCKET_LIB_HEADERS ${SOCKET_LIB_INCLUDE_DIR}/*.h)
file(GLOB SOCKET_LIB_SOURCE ${SOCKET_LIB_SOURCE_DIR}/*.cpp)

add_library(Socket SHARED ${SOCKET_LIB_SOURCE} ${SOCKET_LIB_HEADERS} ${SOCKET_LIB_PROTOCOL_HEADER})

target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
target_compile_options(${PROJECT_NAME} PRIVATE "-Wall")

target_include_directories(${PROJECT_NAME} PUBLIC ${SOCKET_LIB_INCLUDE_DIR})

set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})

install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})
